<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="my.deler.moneycontroller.ui.viewmodel.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/addIncomingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fm_add_incoming"
                android:clickable="@{viewModel.progressViewModel.isLoading ? false : true}"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/addExpenseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fm_add_expense"
                android:clickable="@{viewModel.progressViewModel.isLoading ? false : true}"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/addIncomingButton"/>

        <Button
                android:id="@+id/selectFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fm_select_file"
                android:visibility="gone"
                android:clickable="@{viewModel.progressViewModel.isLoading ? false : true}"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/addExpenseButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>